--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,8 @@
     android:background="@android:color/holo_blue_light"
     tools:context=".LoginActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="150dp"
@@ -30,15 +26,21 @@
                 android:layout_margin="30dp"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="right"
+                    android:src="@drawable/telkom" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Login"
-                    android:gravity="center"
-                    android:textStyle="bold"
                     android:fontFamily="@font/catamaran"
+                    android:gravity="center"
+                    android:text="Login"
                     android:textColor="@android:color/holo_blue_light"
-                    android:textSize="26dp"/>
+                    android:textSize="26dp"
+                    android:textStyle="bold" />
 
 
                 <LinearLayout
@@ -48,8 +50,8 @@
 
                     <ImageView
                         android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:layout_height="35dp"
+                        android:src="@drawable/username"/>
 
                     <EditText
                         android:layout_width="match_parent"
@@ -64,14 +66,23 @@
 
                     <ImageView
                         android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:layout_height="60dp"
+                        android:src="@drawable/lock"/>
 
-                    <EditText
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/edt_password"
-                        android:hint="Enter Username"/>
+                        app:passwordToggleEnabled="true">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Password"
+                            android:inputType="textPassword"
+                            android:id="@+id/edt_password"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+
                 </LinearLayout>
 
 
@@ -98,4 +109,3 @@
     </LinearLayout>
 
 
-</LinearLayout>
