--- a/app/src/main/res/layout/activity_pelapor.xml
+++ b/app/src/main/res/layout/activity_pelapor.xml
@@ -12,20 +12,23 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_image_black_24dp"/>
+            android:layout_width="25dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="25dp"
+            android:src="@drawable/account" />
 
         <TextView
+            android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="8dp"
-            android:id="@+id/tv_username"
-            android:text="Usename"
-            android:textColor="@android:color/holo_red_dark"
+            android:fontFamily="@font/bree_serif"
             android:gravity="center"
-            android:textStyle="bold"/>
+            android:text="Usename"
+            android:textColor="#00BCD4"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,14 +39,15 @@
             android:gravity="right">
 
             <TextView
+                android:id="@+id/tv_keluar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/tv_keluar"
-                android:text="Keluar"
+                android:fontFamily="@font/bree_serif"
                 android:gravity="center|right"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:textColor="@android:color/black"/>
+                android:text="Keluar"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
@@ -54,28 +58,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="30dp"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="300dp"
-                android:id="@+id/iv_image_pealpor"
-                android:src="@drawable/ic_image_black_24dp"/>
+                android:id="@+id/iv_image_pelapor"
+                android:layout_gravity="center"
+                android:src="@drawable/camera"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:lines="6"
+                android:hint="Deskripsi kerusakan"
                 android:id="@+id/edt_deskripsi"/>
-
-            <Button
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:lines="6"
+                android:hint="Lokasi"
+                android:id="@+id/edt_Lokasi"/>
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="30dp"
                 android:background="@color/colorBtn"
+                android:layout_gravity="center"
                 android:text="Kirim"
                 android:id="@+id/btn_kirim_pelapor"
+                android:layout_marginTop="50dp"
                 android:textColor="@android:color/white"
-                android:textSize="20dp"/>
+                android:textSize="10dp"/>
 
         </LinearLayout>
 
