--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -61,19 +61,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/rb_validator"
+                android:layout_marginLeft="50dp"
                 android:text="Validator"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/rb_teknisi"
+                android:layout_marginLeft="50dp"
                 android:text="Teknisi"/>
 
         </RadioGroup>
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_registrasi"
+            android:layout_gravity="center"
             android:background="@color/colorBtn"
             android:text="Daftar"
             android:textColor="@android:color/white"
