--- a/app/src/main/res/layout/item_validator.xml
+++ b/app/src/main/res/layout/item_validator.xml
@@ -1,60 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="8dp">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/iv_item_validator"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_desk_validator"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_desk_alamat"/>
-
-
+        app:cardElevation="8dp"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="8dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_ya"
-                android:layout_weight="1"
-                android:background="@color/colorBtn"
-                android:textSize="20dp"
-                android:textColor="@android:color/white"
-                android:text="DISETUJUI"
-                android:layout_margin="8dp"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_tidak"
-                android:layout_weight="1"
-                android:background="@color/colorAccent"
-                android:textSize="20dp"
-                android:textColor="@android:color/white"
-                android:text="DITOLAK"
-                android:layout_margin="8dp"/>
+            android:orientation="vertical">
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_height="150dp"
+                    android:scaleType="fitXY"
+                    android:src="@color/colorPrimary"
+                    android:id="@+id/iv_item_validator"/>
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/lg"/>
+
+            </FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/tv_desk_validator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/cherry_cream_soda"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/tv_desk_alamat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/bree_serif" />
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:layout_marginTop="8dp"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+                    <Button
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:id="@+id/btn_ya"
+                        android:layout_gravity="right"
+                        android:background="@color/colorBtn"
+                        android:textSize="10dp"
+                        android:textColor="@android:color/white"
+                        android:text="SETUJU"
+                        android:layout_margin="8dp"/>
+                    <Button
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:id="@+id/btn_tidak"
+                        android:background="@color/colorAccent"
+                        android:layout_gravity="right"
+                        android:textSize="10dp"
+                        android:textColor="@android:color/white"
+                        android:text="TOLAK"
+                        android:layout_margin="8dp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
