--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/arbutus</item>
         <item>@font/atomic_age</item>
         <item>@font/bree_serif</item>
+        <item>@font/bubblegum_sans</item>
         <item>@font/catamaran</item>
         <item>@font/cherry_cream_soda</item>
         <item>@font/graduate</item>
