--- a/app/src/main/res/layout/nav_header_validator_nav.xml
+++ b/app/src/main/res/layout/nav_header_validator_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#FF007F"
+    android:background="#ffffff"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,12 +14,24 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
         android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:layout_gravity="center"
-        android:src="@drawable/menu"/>
+        android:paddingTop="30dp"
+        android:src="@drawable/logotelkom" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="TelkomApps"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20dp"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
 
 
