--- a/app/src/main/res/layout/fragment_pelapor_upload.xml
+++ b/app/src/main/res/layout/fragment_pelapor_upload.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.pelapor.PelaporActivity">
+    tools:context=".ui.pelapor.PelaporUploadFragment">
+
+    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -55,17 +56,20 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="@drawable/bgputih">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#F1F0F0"
-            android:layout_margin="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
                 android:id="@+id/iv_image_pelapor"
                 android:layout_marginTop="90dp"
                 android:layout_gravity="center"
@@ -96,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorBtn"
-                android:layout_gravity="center"
+                android:layout_gravity="center|bottom"
                 android:text="Kirim"
                 android:id="@+id/btn_kirim_pelapor"
                 android:layout_marginTop="50dp"
@@ -106,7 +110,6 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </LinearLayout>
