--- a/app/src/main/res/layout/nav_header_teknisi_nav.xml
+++ b/app/src/main/res/layout/nav_header_teknisi_nav.xml
@@ -2,9 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="230dp"
     android:background="#ffffff"
-    android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -12,27 +11,78 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center_horizontal"
-        android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="30dp"
-        android:src="@drawable/logotelkom" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        android:fontFamily="@font/bubblegum_sans"
-        android:text="TelkomApps"
-        android:layout_gravity="center_horizontal"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:textStyle="bold" />
+        android:layout_marginTop="4dp"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="80dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"
+                android:contentDescription="@string/nav_header_desc"
+                android:src="@drawable/logotelkom" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/bubblegum_sans"
+                android:text="TelkomApps"
+                android:textColor="#000000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/white"
+                android:outlineSpotShadowColor="@color/colorBtn"
+                android:numStars="5"
+                android:rating="2.5"
+                android:stepSize="0.5"/>
+
+            <TextView
+                android:id="@+id/tv_coba"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Penilaian dari 50 pelapor"
+                android:textColor="@android:color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tv_dcoba"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Predikat "
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_dcobda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sangat Bagus"
+                    android:textColor="@color/colorBtn"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
