--- a/app/src/main/res/layout/nav_header_teknisi_nav.xml
+++ b/app/src/main/res/layout/nav_header_teknisi_nav.xml
@@ -6,7 +6,7 @@
     android:background="#ffffff"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="4dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -14,12 +14,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <ImageView
@@ -46,14 +46,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/rb_teknisi"
                 android:background="@android:color/white"
                 android:outlineSpotShadowColor="@color/colorBtn"
                 android:numStars="5"
-                android:rating="2.5"
                 android:stepSize="0.5"/>
 
             <TextView
-                android:id="@+id/tv_coba"
+                android:id="@+id/tv_penilaian_dari"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Penilaian dari 50 pelapor"
