--- a/app/src/main/res/layout/nav_header_teknisi_nav.xml
+++ b/app/src/main/res/layout/nav_header_teknisi_nav.xml
@@ -73,10 +73,10 @@
                     android:textColor="@android:color/black" />
 
                 <TextView
-                    android:id="@+id/tv_dcobda"
+                    android:id="@+id/tv_predikat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sangat Bagus"
+                    android:text="null"
                     android:textColor="@color/colorBtn"
                     android:textStyle="bold" />
 
