--- a/app/src/main/res/layout/activity_teknisi.xml
+++ b/app/src/main/res/layout/activity_teknisi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.teknisi.TeknisiNavActivity">
+    tools:context=".ui.teknisi.activity.TeknisiNavActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
