--- a/app/src/main/res/layout/content_pelapor_nav.xml
+++ b/app/src/main/res/layout/content_pelapor_nav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.pelapor.PelaporNavActivity"
+    tools:context=".ui.pelapor.activity.PelaporNavActivity"
     tools:showIn="@layout/app_bar_pelapor_nav">
     <FrameLayout
         android:layout_width="match_parent"
