--- a/app/src/main/res/layout/content_teknisi_nav.xml
+++ b/app/src/main/res/layout/content_teknisi_nav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.teknisi.TeknisiNavActivity"
+    tools:context=".ui.teknisi.activity.TeknisiNavActivity"
     tools:showIn="@layout/app_bar_teknisi_nav">
     <FrameLayout
         android:layout_width="match_parent"
