--- a/app/src/main/res/layout/fragment_data_pelapor.xml
+++ b/app/src/main/res/layout/fragment_data_pelapor.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.validator.DataPelaporFragment">
+    tools:context=".ui.validator.fragment.DataPelaporFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
