--- a/app/src/main/res/layout/fragment_histori_pelapor.xml
+++ b/app/src/main/res/layout/fragment_histori_pelapor.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.pelapor.HistoriPelaporFragment">
+    tools:context=".ui.pelapor.fragment.HistoriPelaporFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
