--- a/app/src/main/res/layout/fragment_pelapor_upload.xml
+++ b/app/src/main/res/layout/fragment_pelapor_upload.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.pelapor.PelaporUploadFragment">
+    tools:context=".ui.pelapor.fragment.PelaporUploadFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
