adding fixing push not

--- a/app/src/main/res/menu/activity_validator_nav_drawer.xml
+++ b/app/src/main/res/menu/activity_validator_nav_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
             android:title="Histori" />
         <item
+            android:id="@+id/daftarkan_teknisi"
+            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
+            android:title="Daftarkan Teknisi" />
+        <item
             android:id="@+id/logout"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Logout" />
